src/objects/Apttus__LiteUserSummary__c.object
<CustomObject>
    <description>Holds lite users summary information</description>
    <fields>
        <fullName>Apttus__IsExceededLogin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user exceeded allowed login count</description>
        <inlineHelpText>Indicates whether the user exceeded allowed login count</inlineHelpText>
        <label>Has Exceeded Allowed Login?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__LastLoginCount__c</fullName>
        <description>Number of logins happened for the given period</description>
        <inlineHelpText>Number of logins for the given period</inlineHelpText>
        <label>Login Count for Given Period</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Profile__c</fullName>
        <description>Name of the lite profile</description>
        <inlineHelpText>Name of the lite profile</inlineHelpText>
        <label>Profile</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TotalLoginTillDate__c</fullName>
        <description>Total login count from the time onwards user added into Lite profile</description>
        <inlineHelpText>Total user login count since inception</inlineHelpText>
        <label>Total login count Till Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Id belongs to lite profiles</description>
        <inlineHelpText>User Id belongs to lite profiles</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lite_Users_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lite User Usage Summary</label>
    <nameField>
        <label>Lite User Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lite Users Usage Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>